Fix: Add lmodern and cm-super fonts for LaTeX PDF generation & updated the job scraping selectors

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,6 +12,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     texlive-latex-extra \
     texlive-fonts-recommended \
     texlive-fonts-extra \
+    lmodern \
+    cm-super \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
